welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: '<-' expected but ')' found.
	for (i<7 to 1 by -1) {
                           ^SnakeBuggle:17: error: illegal start of simple expression
}
^